# miniball

./: LICENSE.txt
python/src/: CMakeLists.txt  miniball.cpp  miniball.i
